--- a/package.json
+++ b/package.json
@@ -1,19 +1,19 @@
 {
-  "name": "routerlambda",
+  "name": "aiorimi",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://psyche.id/aiorimi",
   "dependencies": {
-    "node-sass": "^4.11.0",
-    "prop-types": "^15.7.2",
-    "react": "^16.8.6",
-    "react-bulma-components": "^3.0.1-4",
-    "react-dom": "^16.8.6",
-    "react-scripts": "2.1.8"
+    "node-sass": "^4.14.1",
+    "react": "^16.13.1",
+    "react-bulma-components": "^3.2.0",
+    "react-dom": "^16.13.1",
+    "react-scripts": "^3.4.1"
   },
   "scripts": {
-    "start": "NODE_PATH=./src react-scripts start",
-    "build": "NODE_PATH=./src react-scripts build",
-    "test": "NODE_PATH=./src react-scripts test",
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
